crates/macro/ui-tests/generic-return-non-erasable.stderr
error[E0271]: type mismatch resolving `<u32 as ErasableGeneric>::Repr == JsValue`
  --> ui-tests/generic-return-non-erasable.rs:16:30
   |
16 |     let _: u32 = get_value::<u32>();
   |                              ^^^ expected `JsValue`, found `u32`
   |
   = note: required for `u32` to implement `ErasableGenericOwn<wasm_bindgen::JsValue>`
note: required by a bound in `get_value`
  --> ui-tests/generic-return-non-erasable.rs:3:1
   |
3  | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^ required by this bound in `get_value`
...
7  |     pub fn get_value<T>() -> T;
   |            --------- required by a bound in this function
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Option<u32> as ErasableGeneric>::Repr == Option<JsValue>`
  --> ui-tests/generic-return-non-erasable.rs:20:41
   |
20 |     let _: Option<u32> = get_optional::<u32>();
   |                                         ^^^ expected `Option<JsValue>`, found `Option<u32>`
   |
   = note: expected enum `Option<wasm_bindgen::JsValue>`
              found enum `Option<u32>`
   = note: required for `Option<u32>` to implement `ErasableGenericOwn<Option<wasm_bindgen::JsValue>>`
note: required by a bound in `get_optional`
  --> ui-tests/generic-return-non-erasable.rs:3:1
   |
3  | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^ required by this bound in `get_optional`
...
11 |     pub fn get_optional<T>() -> Option<T>;
   |            ------------ required by a bound in this function
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
